Fix various Error Prone compiler warnings