@@ -1,19 +1,5 @@
 package io.dropwizard.configuration;
 
-import static java.util.Objects.requireNonNull;
-
-import java.io.IOException;
-import java.io.InputStream;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.regex.Pattern;
-import java.util.stream.Collectors;
-
-import javax.annotation.Nullable;
-import javax.validation.ConstraintViolation;
-import javax.validation.Validator;
-
 import com.fasterxml.jackson.core.JsonFactory;
 import com.fasterxml.jackson.core.JsonParseException;
 import com.fasterxml.jackson.core.JsonParser;
@@ -28,6 +14,20 @@ import com.fasterxml.jackson.databind.node.TextNode;
 import com.fasterxml.jackson.databind.node.TreeTraversingParser;
 import com.google.common.base.Joiner;
 import com.google.common.base.Splitter;
+
+import javax.annotation.Nullable;
+import javax.validation.ConstraintViolation;
+import javax.validation.Validator;
+import java.io.IOException;
+import java.io.InputStream;
+import java.lang.reflect.InvocationTargetException;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.regex.Pattern;
+import java.util.stream.Collectors;
+
+import static java.util.Objects.requireNonNull;
 
 /**
  * A generic factory class for loading configuration files, binding them to configuration objects, and
@@ -104,9 +104,11 @@ public abstract class BaseConfigurationFactory<T> implements ConfigurationFactor
     @Override
     public T build() throws IOException, ConfigurationException {
         try {
-            final JsonNode node = mapper.valueToTree(klass.newInstance());
+            final T instance = klass.getDeclaredConstructor().newInstance();
+            final JsonNode node = mapper.valueToTree(instance);
             return build(node, "default configuration");
-        } catch (InstantiationException | IllegalAccessException | IllegalArgumentException | SecurityException e) {
+        } catch (InstantiationException | IllegalAccessException | IllegalArgumentException | SecurityException
+                | NoSuchMethodException | InvocationTargetException e) {
             throw new IllegalArgumentException("Unable create an instance " +
                 "of the configuration class: '" + klass.getCanonicalName() + "'", e);
         }
